@@ -1,8 +1,11 @@
 package snownee.kiwi.customization.builder;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import java.util.function.Predicate;
+
+import org.jetbrains.annotations.Nullable;
 
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
@@ -16,6 +19,7 @@ import net.minecraft.client.player.LocalPlayer;
 import net.minecraft.client.resources.sounds.SimpleSoundInstance;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.InteractionHand;
@@ -131,7 +135,7 @@ public class BuildersButton {
 			for (Item item : family.value().items().toList()) {
 				float convertRatio = BlockFamilies.getConvertRatio(item);
 				CConvertItemPacket.Entry entry = new CConvertItemPacket.Entry(ratio / convertRatio);
-				Pair<KHolder<BlockFamily>, Item> pair = Pair.of(family, item);
+				Pair<ResourceLocation, Item> pair = Pair.of(family.key(), item);
 				entry.steps().add(pair);
 				if (cascading) {
 					unresolved.add(entry);
@@ -143,8 +147,8 @@ public class BuildersButton {
 				addedItems.add(item);
 			}
 			while (!unresolved.isEmpty()) {
-				CConvertItemPacket.Entry parentEntry = unresolved.remove(0);
-				Pair<KHolder<BlockFamily>, Item> lastStep = parentEntry.steps().get(parentEntry.steps().size() - 1);
+				CConvertItemPacket.Entry parentEntry = unresolved.removeFirst();
+				Pair<ResourceLocation, Item> lastStep = parentEntry.steps().getLast();
 				Item lastItem = lastStep.getSecond();
 				ratio = BlockFamilies.getConvertRatio(lastItem);
 				for (KHolder<BlockFamily> nextFamily : BlockFamilies.findQuickSwitch(lastItem, player.isCreative())) {
@@ -158,7 +162,7 @@ public class BuildersButton {
 						float convertRatio = BlockFamilies.getConvertRatio(nextItem);
 						CConvertItemPacket.Entry entry = new CConvertItemPacket.Entry(parentEntry.ratio() * ratio / convertRatio);
 						entry.steps().addAll(parentEntry.steps());
-						entry.steps().add(Pair.of(nextFamily, nextItem));
+						entry.steps().add(Pair.of(nextFamily.key(), nextItem));
 						if (!addedItems.contains(nextItem)) {
 							group.entries().add(entry);
 							addedItems.add(nextItem);
@@ -222,6 +226,7 @@ public class BuildersButton {
 		return true;
 	}
 
+	@Nullable
 	private static LocalPlayer ensureBuilderMode() {
 		if (!isBuilderModeOn()) {
 			return null;
@@ -233,7 +238,8 @@ public class BuildersButton {
 		if (!isBuilderModeOn() /*|| Minecraft.getInstance().options.renderDebug*/) {
 			return;
 		}
-		left.add("Builder Mode is on, long press %s to toggle".formatted(CustomizationClient.buildersButtonKey.getTranslatedKeyMessage()
+		left.add("Builder Mode is on, long press %s to toggle".formatted(Objects.requireNonNull(CustomizationClient.buildersButtonKey)
+				.getTranslatedKeyMessage()
 				.getString()));
 	}
 
